# experience

./: .gitignore  README.md  pyproject.toml
configs/: README.md  upstreams.lock.yaml
configs/adapters/: deep-common.json  fact.json  itransformer.json  s4m.json  timepro.json  timexer.json
configs/baselines/: v1.json
configs/data/: d0-schema-v1.json  source.yaml
configs/evaluation/: v1.json
configs/features/: d0-v1.json  tabular-layout-v1.json
configs/models/: lightgbm-v1.json  ridge-v1.json
configs/portfolio/: costs-v1.json
docs/: d0_protocol.md  d0_server_runbook.md  deep_adapters.md  deep_job_generator_runbook.md  deep_runner_runbook.md  model_fidelity.md  tabular_model_protocol.md  tabular_runner_runbook.md  v0_orchestration.md  v1_information_ablation_protocol.md  v2_risk_portfolio_protocol.md
envs/: README.md
patches/: README.md
scripts/: __init__.py  audit_baseline_environment.py  audit_d0.py  audit_eval_2026_lineage.py  audit_upstream_registry.py  bootstrap_upstream_env.py  build_canonical_d0.py  build_source_manifest.py  checkout_upstream.py  compile_d0_manifest.py  generate_d0_request_manifest.py  generate_deep_job_manifests.py  generate_formal_feature_receipts.py  generate_index_history_request_manifest.py  generate_tabular_job_manifests.py  install_approved_proxy_client.py  materialize_d0.py  report_d0_quality.py  run_deep_cells.py  run_tabular_cells.py  run_tabular_evaluation_2026.py  run_topk_evaluation.py  score_2026.py  score_v0.py  score_v1.py  smoke_deep_adapter_runtime.py  smoke_upstream_forward.py  stage_d0_bootstrap.py
(+177 files in other folders)
